2002-10-14  Stephane Carrez  <stcarrez@nerim.fr>

	* ld-m68hc11/m68hc11.exp: Specific tests for 68HC11/68HC12.
	* ld-m68hc11/adj-jump.d: New test for linker relaxation.
	* ld-m68hc11/adj-jump.s: Likewise.
	* ld-m68hc11/adj-brset.s: Likewise.
	* ld-m68hc11/adj-brset.d: Likewise.
	* ld-m68hc11/relax-direct.s: Likewise.
	* ld-m68hc11/relax-direct.d: Likewise.
	* ld-m68hc11/relax-group.s: Likewise.
	* ld-m68hc11/relax-group.d: Likewise.
	* ld-m68hc11/bug-1403.d: Likewise.
	* ld-m68hc11/bug-1403.s: Likewise.

2002-10-14  Stephen Clarke <stephen.clarke@superh.com>
	* ld-sh/ld-r-1.d: Disable for sh64*-*-linux*.
	* ld-sh/sh64/sh64.exp: Likewise.
	* ld-sh/sh.exp: Disable relaxing tests for sh64*-*-linux*.
	* ld-sh/sh64/abi32.sd: Adjust expected output to include
	sh64*-*-linux* formats too.
	* ld-sh/sh64/relax.exp: Add emul32 variable to hold target
	emulation, and set it appropriately for sh*-*-linux*.
	* ld-sh/sh64/relfail.exp: Add variables to hold target
	emulation, output format, start symbol, and whether target
	supports 64-bit ABI.  Set appropriately for sh*-*-linux*.

2002-10-12  H.J. Lu  (hjl@gnu.org)

	* ld-discard/extern.d: Remove $srcdir/$subdir/.
	* ld-discard/start.d: Likewise.
	* ld-discard/static.d: Likewise.
	* ld-linkonce/zeroehl32.d: Likewise.
	* ld-selective/keepdot.d: Likewise.
	* ld-selective/keepdot0.d: Likewise.

2002-10-11  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/rd-sh.exp: If the test matches *-dso.d, copy the output
	of linker to the file tmpdir/*-dso.so.
	* ld-sh/tlsbin.s, ld-sh/tlsbinpic.s, ld-sh/tlslib.s: New.
	* ld-sh/tlsbin-0-dso.d: New.
	* ld-sh/tlsbin-1.d: New.
	* ld-sh/tlsbin-2.d: New.
	* ld-sh/tlsbin-3.d: New.
	* ld-sh/tlsbin-4.d: New.
	* ld-sh/tlspic1.s, ld-sh/tlspic2.s: New.
	* ld-sh/tlspic-1.d: New.
	* ld-sh/tlspic-2.d: New.
	* ld-sh/tlspic-3.d: New.
	* ld-sh/tlspic-4.d: New.

2002-10-10  Jakub Jelinek  <jakub@redhat.com>

	* ld-i386/combreloc.s: New test.
	* ld-i386/combreloc.d: New test.