@@ -204,7 +204,7 @@ Disassembly of section \.text:
   40117e:	0b 00       	rts	
   401180:	f6 6c       	mov\.l	@r15\+,r12
   401182:	09 00       	nop	
-  401184:	3c 1f       	.*[ 	]*.*
+  401184:	[0-9a-f]+ [0-9a-f]+       	.*[ 	]*.*
   401186:	01 00       	.*[ 	]*.*
 	\.\.\.
 
@@ -291,6 +291,6 @@ Disassembly of section \.text:
   40209e:	e3 6f       	mov	r14,r15
   4020a0:	0b 00       	rts	
   4020a2:	f6 6e       	mov\.l	@r15\+,r14
-  4020a4:	1c 10       	.*[ 	]*.*
+  4020a4:	[0-9a-f]+ [0-9a-f]+       	.*[ 	]*.*
   4020a6:	01 00       	.*[ 	]*.*
 	\.\.\.
