@@ -276,7 +276,7 @@ Disassembly of section \.text:
  [0-9a-f]+:	0b 00       	rts	
  [0-9a-f]+:	f6 6c       	mov\.l	@r15\+,r12
  [0-9a-f]+:	09 00       	nop	
- [0-9a-f]+:	cc 00       	.*[ 	]*.*
+ [0-9a-f]+:	[0-9a-f]+ [0-9a-f]+       	.*[ 	]*.*
  [0-9a-f]+:	01 00       	.*[ 	]*.*
  [0-9a-f]+:	08 00       	.*[ 	]*.*
  [0-9a-f]+:	00 00       	.*[ 	]*.*
